# fastastra

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
datastore/: cassandra_util.py  simple_cassandra_datastore.py
examples/: chatbot.py  todo.py
fastastra/: fastastra.py
tests/: test_fastastra.py
