[project]
name = "fastastra"
version = "0.1.38"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "uvicorn>=0.30.3",
  "python-dotenv>=1.0.1",
  "tenacity>=8.2.1",
  "numpy>=1.24.2",
  "cassandra-driver>=3.28",
  "loguru>=0.7.0",
  "pyyaml>=6.0.1",
  "pydantic>=2.7.4",
  "python-fasthtml>=0.2.4",
  "agentd>=0.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.20.3",
]


[project.scripts]
start = "cass_api.main:start"
dev   = "cass_api.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastastra/", "datastore/"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode="auto"
